# 3DReconstructionByPointCloud

./: CMakeLists.txt  README.md
calibration/: CMakeLists.txt
charuco_board/: CMakeLists.txt  create_board_charuco.cpp  detect_board_charuco.cpp
config/: board_params.yml  camera_params.yml
reconstruction/: CMakeLists.txt  main.cpp  recon.cpp  recon.h
segmentation/: CMakeLists.txt  seg_test.cpp  segmentation.cpp  segmentation.h
solvePnP/: CMakeLists.txt  solvePnP.cpp  solvePnP.h
viz/: CMakeLists.txt
